src/index.css
html {
	scroll-padding-top: 200px;
}

body {
	margin: 0;
	padding: 0;
}

#page-container {
	align-items: center;
	background-image: url('/assets/desk.jpg');
	background-size: 100%;
	display: flex;
	flex-direction: column;
	padding-bottom: 15px;
}

#paper {
	background-color: white;
	box-shadow: 0px 30px 15px -15px rgba(0, 0, 0, 0.3);
	display: flex;
	height: 100%;
	justify-content: center;
	width: 100%;
}

#paper-content {
	display: flex;
	flex-direction: column;
	max-width: 1000px;
	padding: 250px 20px 50px 20px;
	width: 100%;
}

#intro {
	align-self: flex-start;
	display: flex;
	flex-direction: column;
	font-size: 1.5rem;
}

#intro > span {
	margin-bottom: 5px;
}

#intro-2 {
	margin-left: 3rem;
}

#intro-3 {
	margin-left: 6rem;
}

#intro-4 {
	margin-left: 9rem;
}

#full-name-container {
	align-items: flex-end;
	align-self: flex-end;
	display: flex;
	flex-direction: column;
	margin-top: 30px;
}

#full-name-preline {
	font-size: 1.5rem;
}

#full-name-title {
	font-size: 3.6rem;
	margin: 0;
}

#fleuron {
	align-self: center;
	height: 30%;
	margin-top: 75px;
	margin-bottom: 175px;
}

#about-me-section {
	align-items: center;
	display: flex;
	flex-direction: column;
}

.chapter-number {
	align-self: center;
	font-size: 1.2rem;
	letter-spacing: 2px;
	margin-bottom: 5px;
}

.chapter-title {
	align-self: center;
	font-size: 2.75rem;
	margin: 0;
	margin-bottom: 10px;
}

#about-me-section > p {
	font-size: 1.2rem;
	line-height: 1.8rem;
	max-width: 1000px;
	text-indent: 2.5rem;
}

#about-me-section > ul {
	align-self: flex-start;
	font-size: 1.2rem;
}

#resume-section {
	align-items: center;
	display: flex;
	flex-direction: column;
	margin-top: 150px;
}

#download-resume-button {
	border: 2px solid black;
	border-radius: 15px;
	color: black;
	cursor: pointer;
	font-size: 1.2rem;
	font-weight: bold;
	margin-top: 20px;
	padding: 20px;
	text-align: center;
	text-decoration: none;
}

#download-resume-button:hover {
	animation-duration: 1s;
	animation-fill-mode: forwards;
	animation-name: button-fill;
}

#software-section {
	display: flex;
	flex-direction: column;
	margin-top: 150px;
}

#software-section > p {
	font-size: 1.2rem;
	line-height: 1.8rem;
	max-width: 1000px;
	text-indent: 2.5rem;
}

#copyright {
	color: black;
	font-size: 0.8rem;
	margin-top: 100px;
}

@keyframes button-fill {
	0% {
		background-color: transparent;
		color: black;
	}

	100% {
		background-color: black;
		color: white;
	}
}

#resume-section > p {
	align-self: flex-start;
	font-size: 1.2rem;
	line-height: 1.5rem;
	max-width: 1000px;
	margin-top: 40px;
	margin-bottom: 0;
	text-indent: 2.5rem;
}

#resume-section > ul {
	align-self: flex-start;
	font-size: 1.2rem;
	line-height: 1.5rem;
	margin-top: 5px;
	margin-left: 0.5rem;
}

#software-tickets {
	display: flex;
	justify-content: space-evenly;
	width: 100%;
}

.software-ticket {
	background-color: white;
	border-top: 1px lightgrey dashed;
	box-shadow: 0px 30px 15px -15px rgba(0, 0, 0, 0.3);
	display: flex;
	flex-direction: column;
	padding: 50px 25px;
	margin-bottom: 30px;
	width: 352px;
	z-index: 1;
}

.software-ticket h2 {
	font-size: 2rem;
	text-align: center;
}

.software-ticket > img {
	align-self: center;
	height: 175px;
	margin-bottom: 25px;
	width: 175px;
}

.software-ticket > p {
	font-size: 1.2rem;
	line-height: 1.5rem;
	margin-bottom: 40px;
}

.software-ticket > a {
	font-size: 1.2rem;
	text-decoration: none;
}

#library-section {
	align-items: center;
	margin-top: 150px;
	display: flex;
	flex-direction: column;
}

#books {
	display: flex;
	justify-content: center;
	margin-top: 30px;
}

#library-section > .chapter-title {
	color: yellow;
}

#latest-story-book {
	box-shadow: 0px 30px 15px -15px rgba(0, 0, 0, 0.3);
	display: flex;
	justify-content: flex-start;
}

#latest-story-title-page {
	align-items: center;
	background: linear-gradient(to right, white 0%, white 95%, #bbbbbb 100%);
	border: 1px solid black;
	border-right: 1px solid #aaaaaa;
	display: flex;
	flex-direction: column;
	height: 430px;
	padding: 40px 30px;
	width: 360px;
}

#latest-story-title-page > img {
	height: 250px;
	margin-bottom: 25px;
	width: 250px;
}

#latest-story-title-page > h2 {
	font-size: 2rem;
	margin: 0;
	text-align: center;
}

#latest-story-excerpt-page {
	align-items: center;
	background: linear-gradient(to left, white 0%, white 95%, #bbbbbb 100%);
	border: 1px solid black;
	border-left: none;
	display: flex;
	flex-direction: column;
	height: 430px;
	padding: 25px 30px;
	width: 360px;
}

#latest-story-excerpt-page > p {
	line-height: 1.4rem;
	margin: 5px 0;
	text-indent: 2rem;
}

#continue-reading-link {
	align-self: flex-end;
	text-indent: 0;
}

#continue-reading-link > a {
	text-decoration: none;
}

#other-stories {
	align-items: center;
	display: flex;
	margin-left: 50px;
}

.other-story-book {
	box-shadow: 0px 30px 20px -15px rgba(0, 0, 0, 0.3);
	height: 430px;
	width: 90px;
}

#view-all-stories {
	background-color: #330099;
	display: block;
	color: white;
	font-size: 2rem;
	font-weight: bold;
	padding: 20px;
	padding-right: 21px;
	text-align: center;
	text-decoration: none;
	writing-mode: vertical-rl;
}

#other-story-2 {
	background-color: #990000;
}

#other-story-3 {
	background-color: #003300;
}

@media screen and (max-width: 1050px) {
	#books {
		align-items: center;
		flex-direction: column;
	}

	#latest-story-book {
		margin-bottom: 50px;
	}
}

@media screen and (max-width: 670px) {
	#paper-content {
		padding-top: 160px;
		padding-bottom: 20px;
	}

	#intro {
		align-items: center;
		align-self: center;
	}

	#intro > span {
		margin-left: 0;
		font-size: 1rem;
	}

	#full-name-container {
		align-items: center;
		align-self: center;
	}

	#full-name-preline {
		font-size: 1.2rem;
	}

	#full-name-title {
		font-size: 2.4rem;
		text-align: center;
	}

	#fleuron {
		height: 100%;
		width: 80%;
		margin-top: 45px;
		margin-bottom: 50px;
	}

	.chapter-number {
		font-size: 1rem;
	}

	.chapter-title {
		font-size: 2rem;
	}

	#about-me-section > p {
		font-size: 1rem;
		line-height: 1.5rem;
	}

	#resume-section {
		margin-top: 50px;
	}

	#resume-section > p {
		font-size: 1rem;
		line-height: 1.5rem;
	}

	#resume-section > ul {
		font-size: 1rem;
		line-height: 1.5rem;
		margin-left: 0;
	}

	#software-section {
		margin-top: 50px;
	}

	#software-section > p {
		font-size: 1rem;
		line-height: 1.5rem;
	}

	#software-tickets {
		align-items: center;
		flex-direction: column;
		justify-content: flex-start;
	}

	.software-ticket {
		width: 90%;
		margin-bottom: 0;
	}

	#library-section {
		margin-top: 50px;
	}

	#books {
		flex-direction: column;
		align-items: center;
	}

	#latest-story-book {
		border: 1px solid black;
		flex-direction: column;
		margin-bottom: 20px;
		width: 90%;
	}

	#latest-story-title-page {
		background: white;
		border: none;
		height: auto;
		padding-bottom: 5px;
		width: 100%;
	}

	#latest-story-title-page > img {
		height: 200px;
		margin-bottom: 15px;
		width: 200px;
	}

	#latest-story-excerpt-page {
		background: white;
		border: none;
		height: auto;
		padding-top: 0;
		padding-bottom: 20px;
		width: 100%;
	}

	#other-stories {
		box-shadow: none;
		flex-direction: column;
		margin-left: 0;
		width: 100%;
	}

	.other-story-book {
		box-shadow: 0px 30px 20px -15px rgba(0, 0, 0, 0.3);
		width: 90%;
		height: 3rem;
	}

	#view-all-stories {
		font-size: 1.5rem;
		height: 3.3rem;
		padding: 10px;
		writing-mode: horizontal-tb;
		z-index: 3;
	}

	#other-story-2 {
		z-index: 2;
	}

	#other-story-3 {
		z-index: 1;
	}

	#copyright {
		margin-top: 30px;
	}
}

